Added css style sheet and styles for index and recipe pages

--- a/cranberry-sauce.html
+++ b/cranberry-sauce.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Cranberry Sauce</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="cranberry">
       <h1>Cranberry Sauce</h1>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNE5cZHNhI02vMjGeVSj4XeqhTH7TwOiLq4Q&usqp=CAU" alt="A bowl of cranberry sauce">
       <h3>Description</h3>
