--- a/taco-bowl.html
+++ b/taco-bowl.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Taco Bowl</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="taco">
       <h1>Taco Bowl</h1>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQX3NGj6sMQFvdFjD77MptClkquuTyp9xhDmw&usqp=CAU" alt="A taco bowl">
       <h3>Description</h3>
