--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Recipes</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
       <h1>Odin Recipes</h1>
       <ul>
-          <li><a href="cranberry-sauce.html">Cranberry Sauce</a></li>
-          <li><a href="turkey-burger.html">Turkey Burger</a></li>
-          <li><a href="taco-bowl.html">Taco Bowl</a></li>
+          <li class="cranberry"><a href="cranberry-sauce.html">Cranberry Sauce</a></li>
+          <li class="turkey"><a href="turkey-burger.html">Turkey Burger</a></li>
+          <li class="taco"><a href="taco-bowl.html">Taco Bowl</a></li>
       </ul>
   </body>
 </html>
