--- a/turkey-burger.html
+++ b/turkey-burger.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Turkey Burger</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="turkey">
       <h1>Turkey Burger</h1>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvWOefrDTdaSEyuuN9KJVA3nVvhYTEPWp-VA&usqp=CAU" alt="Four turkey burgers in a pan">
       <h3>Description</h3>
